--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.5",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^8.5.1",
